bug fix: site title color now white on small

--- a/style.css
+++ b/style.css
@@ -129,3 +129,7 @@ ul.breadcrumbs a:hover, ul.breadcrumbs a:active {
 h1.page-title {
 	font-size: 2.25em;
 }
+
+.blue_bg h2.white {
+	color: #fff;
+}
